--- a/styles/style.css
+++ b/styles/style.css
@@ -4,8 +4,9 @@ html {
 }
 
 .content-width {
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
+    max-width: 1240px;
 }
 
 .padding-top-bottom {
@@ -105,14 +106,6 @@ main a:hover {
     border-radius: 8px;
     background-color: #fff;
     padding: 2rem;
-}
-
-.form .main-form form label {
-    color: blue;
-}
-
-.form div .main-form form input {
-    background-color: blue;
 }
 
 label {
